--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -3,3 +3,23 @@
 @tailwind utilities;
 
 @import "toast.css";
+@import "modals.css";
+
+body {
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
+body::-webkit-scrollbar {
+    width: 0.5em;
+}
+
+body::-webkit-scrollbar-track {
+    background-color: #9a9a9a;
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+body::-webkit-scrollbar-thumb {
+    background-color: #454545;
+    border-radius: 15px;
+}
